<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ececec"
    tools:context="com.example.tmha.square.activity.DetailProjectActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNameProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/nameProject"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:background="@drawable/custom_boder_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_margin="5dp"
                    android:id="@+id/imgProject"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/binhkhanhbridge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startTime" />

                <TextView
                    android:textStyle="italic"
                    android:id="@+id/txtStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14/06/2017" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/endTime" />

                <TextView
                    android:textStyle="italic"
                    android:id="@+id/txtEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14/12/2017" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tiến độ: " />

                <TextView
                    android:id="@+id/txtProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="50%"
                    android:textColor="@color/colorRed" />

                <ProgressBar
                    android:id="@+id/progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="60dp"
                    android:progressDrawable="@drawable/custom_progess_bar"
                    android:secondaryProgress="50" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Danh sách report:"
                    android:textColor="@color/colorBlue"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/layoutCreateReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/background_item_report"
                    android:gravity="center"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txtCreate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tạo"
                        android:textColor="@color/colorBlue" />

                    <ImageView
                        android:id="@+id/imgCreateReport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/txtCreate"
                        android:src="@android:drawable/ic_input_add" />

                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewListReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">


                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/conten_project" />


                <TextView
                    android:id="@+id/txtContentProject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=": @string/conten_project" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">


                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/address" />


                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/address" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/location" />

                <LinearLayout
                    android:id="@+id/layoutViewLocation"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/imgMap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_location_24dp" />

                    <TextView
                        android:layout_gravity="center"
                        android:background="@drawable/background_item_report"
                        android:textColor="#0800ff"
                        android:text="Xem vi tri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createBy" />

                <TextView
                    android:textStyle="italic"
                    android:id="@+id/txtCreateBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trinh Minh Ha" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeCreate" />

                <TextView
                    android:textStyle="italic"
                    android:id="@+id/txtTimeCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="06/14/2017" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
