<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="#ececec"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nameProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:maxLines="2"
                android:background="@drawable/custom_boder_edittext"
                android:id="@+id/edtNameProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_boder_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="5dp"
                android:id="@+id/imgProject"
                android:layout_width="200dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/binhkhanhbridge" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:textColor="@android:color/white"
                android:background="@drawable/custom_button_facebook"
                android:textAllCaps="false"
                android:id="@+id/btnSelectPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chọn hình" />

            <Button
                android:textColor="@android:color/white"
                android:background="@drawable/custom_button_google"
                android:id="@+id/btnCapture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Chụp hình"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="italic"
                android:text="@string/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:background="@drawable/custom_boder_edittext"
                android:id="@+id/edtStartTime"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/ic_calendar"
                android:layout_width="32dp"
                android:layout_height="32dp" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endTime"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/edtEndTime"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_boder_edittext" />

            <ImageView
                android:src="@drawable/ic_calendar"
                android:layout_width="32dp"
                android:layout_height="32dp" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                />

            <SeekBar
                android:id="@+id/seekBarProgress"
                android:progress="0"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtProgress"
                android:textColor="@color/colorBlue"
                android:text="0%"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Vi tri: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:minLines="3"
                android:maxLines="3"
                android:id="@+id/edtLocation"
                android:background="@drawable/custom_boder_edittext"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnGetLocation"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/white"
                android:background="@drawable/custom_button_login"
                android:textAllCaps="false"
                android:text="Lấy vị trí"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Address: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:minLines="3"
                android:maxLines="2"
                android:id="@+id/edtAddress"
                android:background="@drawable/custom_boder_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/conten_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtContentProject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_boder_edittext"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="3" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgCancel"
                    android:textAllCaps="false"
                    android:src="@drawable/ic_cancel_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgSave"
                    android:textAllCaps="false"
                    android:src="@drawable/ic_save_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </LinearLayout>

        </LinearLayout>



    </LinearLayout>





</ScrollView>
